Add order, header, footer components and update existing files

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,177 @@
+<app-header></app-header>
 <div class="container">
-    <h1>Hello World!</h1>
+    <div class="intro-container text-center py-5 bg-dark">
+        <h1 class="display-4 font-weight-bold">Welcome to Our Store</h1>
+        <p class="lead">Explore our wide range of products with images</p>
+        <p class="lead">You can purchase directly from here</p>
+    </div>
+    <div>
+
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="product-item">
+                    <img src="https://nshopvn.com/wp-content/uploads/2024/11/kit-phat-trien-wifi-esp32-c3-super-mini-0ezt-1-600x600.jpg"
+                        alt="product-image" class="product-image">
+                    <h3 class="product-name">Kit phát triển WiFi ESP32 C3 Super Mini</h3>
+                    <p class="product-warranty">Bảo hành 12 tháng</p>
+                    <p class="product-price">Giá: <del>100.000</del> <span class="product-price-new">68.000
+                            VNĐ</span></p>
+
+                    <div class="product-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="product-action">
+                        <button class="btn btn-secondary">
+                            <i class="fa-solid fa-cart-plus"></i>
+                            Thêm
+                        </button>
+                        <button class="btn btn-primary">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            Mua hàng
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="product-item">
+                    <img src="https://nshopvn.com/wp-content/uploads/2024/11/kit-phat-trien-wifi-esp32-c3-super-mini-0ezt-1-600x600.jpg"
+                        alt="product-image" class="product-image">
+                    <h3 class="product-name">Kit phát triển WiFi ESP32 C3 Super Mini</h3>
+                    <p class="product-warranty">Bảo hành 12 tháng</p>
+                    <p class="product-price">Giá: <del>100.000</del> <span class="product-price-new">68.000
+                            VNĐ</span></p>
+                    <div class="product-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="product-action">
+                        <button class="btn btn-secondary">
+                            <i class="fa-solid fa-cart-plus"></i>
+                            Thêm
+                        </button>
+                        <button class="btn btn-primary">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            Mua hàng
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="product-item">
+                    <img src="https://nshopvn.com/wp-content/uploads/2024/11/kit-phat-trien-wifi-esp32-c3-super-mini-0ezt-1-600x600.jpg"
+                        alt="product-image" class="product-image">
+                    <h3 class="product-name">Kit phát triển WiFi ESP32 C3 Super Mini</h3>
+                    <p class="product-warranty">Bảo hành 12 tháng</p>
+                    <p class="product-price">Giá: <del>100.000</del> <span class="product-price-new">68.000
+                            VNĐ</span></p>
+                    <div class="product-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="product-action">
+                        <button class="btn btn-secondary">
+                            <i class="fa-solid fa-cart-plus"></i>
+                            Thêm
+                        </button>
+                        <button class="btn btn-primary">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            Mua hàng
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="product-item">
+                    <img src="https://nshopvn.com/wp-content/uploads/2024/11/kit-phat-trien-wifi-esp32-c3-super-mini-0ezt-1-600x600.jpg"
+                        alt="product-image" class="product-image">
+                    <h3 class="product-name">Kit phát triển WiFi ESP32 C3 Super Mini</h3>
+                    <p class="product-warranty">Bảo hành 12 tháng</p>
+                    <p class="product-price">Giá: <del>100.000</del> <span class="product-price-new">68.000
+                            VNĐ</span></p>
+                    <div class="product-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="product-action">
+                        <button class="btn btn-secondary">
+                            <i class="fa-solid fa-cart-plus"></i>
+                            Thêm
+                        </button>
+                        <button class="btn btn-primary">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            Mua hàng
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="product-item">
+                    <img src="https://nshopvn.com/wp-content/uploads/2024/11/kit-phat-trien-wifi-esp32-c3-super-mini-0ezt-1-600x600.jpg"
+                        alt="product-image" class="product-image">
+                    <h3 class="product-name">Kit phát triển WiFi ESP32 C3 Super Mini</h3>
+                    <p class="product-warranty">Bảo hành 12 tháng</p>
+                    <p class="product-price">Giá: <del>100.000</del> <span class="product-price-new">68.000
+                            VNĐ</span></p>
+                    <div class="product-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="product-action">
+                        <button class="btn btn-secondary">
+                            <i class="fa-solid fa-cart-plus"></i>
+                            Thêm
+                        </button>
+                        <button class="btn btn-primary">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            Mua hàng
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="product-item">
+                    <img src="https://nshopvn.com/wp-content/uploads/2024/11/kit-phat-trien-wifi-esp32-c3-super-mini-0ezt-1-600x600.jpg"
+                        alt="product-image" class="product-image">
+                    <h3 class="product-name">Kit phát triển WiFi ESP32 C3 Super Mini</h3>
+                    <p class="product-warranty">Bảo hành 12 tháng</p>
+                    <p class="product-price">Giá: <del>100.000</del> <span class="product-price-new">68.000 VNĐ</span>
+                    </p>
+                    <div class="product-rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="product-action">
+                        <button class="btn btn-secondary">
+                            <i class="fa-solid fa-cart-plus"></i>
+                            Thêm
+                        </button>
+                        <button class="btn btn-primary">
+                            <i class="fa-solid fa-bag-shopping"></i>
+                            Mua hàng
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<app-footer></app-footer>
