Thêm chức năng đăng nhập và xác nhận đơn hàng

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,8 +6,8 @@
                     <h3>Về TGrey Shop</h3>
                     <p>Chuyên cung cấp các sản phẩm chất lượng cao</p>
                     <p>Địa chỉ: 702 XLHN, phường Hiệp Phú, Thành Phố Thủ Đức, TP.HCM</p>
-                    <p>Email: contact&#64;tgreyshop.com</p>
-                    <p>Hotline: 0909090909</p>
+                    <p>Email: thanh.grey.tdt&#64;gmail.com</p>
+                    <p>Hotline: 0397554756</p>
                 </div>
 
                 <div class="footer-section">
@@ -23,10 +23,10 @@
                 <div class="footer-section">
                     <h3>Theo dõi chúng tôi</h3>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.facebook.com/thanhgrey1410"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/tgrey1410/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@tgrey.hoc.it"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.tiktok.com/@tgrey.hoc.it"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
