--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
             </a>
             <div class="search-box">
                 <input type="text" class="form-control search-input" placeholder="Tìm kiếm sản phẩm">
-                <button class="btn btn-secondary">
+                <button class="btn btn-secondary search-button">
                     <i class="fas fa-search"></i>
                 </button>
             </div>
@@ -48,9 +48,6 @@
                         <a class="nav-link" href="#">Liên hệ</a>
                     </li>
                 </ul>
-
-
-
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">
