--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -62,8 +62,7 @@
                 <h4 class="product-header text-end">Tổng tiền: <span class="total-price">988.000</span>VNĐ</h4>
             </div>
             <div class="text-end mt-3 discount-container d-flex">
-                <input type="text" name="discount" id="discount" class="form-control me-2"
-                    placeholder="Nhập mã giảm giá">
+                <input type="text" name="discount" id="discount" class="form-control" placeholder="Nhập mã giảm giá">
                 <button class="btn btn-gradient" type="button">Áp dụng</button>
             </div>
         </div>
