Update UI: Improve header mobile menu, login form and footer styling

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,13 +1,15 @@
 .footer {
-    background-color: #34495e;
+
     color: #ffffff;
     padding: 40px 0 20px;
     margin-top: 50px;
+    width: auto;
 
     .container {
         max-width: 1200px;
         margin: 0 auto;
-        padding: 0 15px;
+        padding: 0 30px;
+        width: 100%;
     }
 
     .footer-content {
