--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,17 +6,27 @@
                 <h2 class="login-header">Đăng nhập</h2>
                 <div class="form-group">
                     <label for="email">Email/Phone</label>
-                    <input type="text" class="form-control" id="account" placeholder="Nhập email/phone">
+                    <input type="text" class="form-control" id="account" placeholder="">
                     <div class="divider-nospace"></div>
                 </div>
                 <div class="form-group">
                     <label for="password">Mật khẩu</label>
-                    <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu">
+                    <input type="password" class="form-control" id="password" placeholder="">
                     <div class="divider-nospace"></div>
-
+                </div>
+                <div class="form-group">
+                    <div class="form-check checkbox-text">
+                        <span style="display: flex">
+                            <input type="checkbox" class="form-check-input" id="remember">
+                            <label for="remember" class="form-check-label checkbox-start">Ghi nhớ đăng nhập</label>
+                        </span>
+                        <a href="" class="forgot-password">Quên mật khẩu?</a>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary">Đăng nhập</button>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<app-footer></app-footer>
+    <app-footer></app-footer>
