--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,31 +2,43 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <div class="login-form mx-auto">
-                <h2 class="login-header">Đăng nhập</h2>
-                <div class="form-group">
-                    <label for="email">Email/Phone</label>
-                    <input type="text" class="form-control" id="account" placeholder="">
-                    <div class="divider-nospace"></div>
-                </div>
-                <div class="form-group">
-                    <label for="password">Mật khẩu</label>
-                    <input type="password" class="form-control" id="password" placeholder="">
-                    <div class="divider-nospace"></div>
-                </div>
-                <div class="form-group">
-                    <div class="form-check checkbox-text">
-                        <span style="display: flex">
-                            <input type="checkbox" class="form-check-input" id="remember">
-                            <label for="remember" class="form-check-label checkbox-start">Ghi nhớ đăng nhập</label>
-                        </span>
-                        <a href="" class="forgot-password">Quên mật khẩu?</a>
+            <form autocomplete="off">
+                <div class="login-form mx-auto">
+                    <h2 class="login-header">Đăng nhập</h2>
+                    <div class="form-group">
+                        <label for="email">Email/Phone</label>
+                        <input type="text" class="form-control" id="account" placeholder="">
+                        <div class="divider-nospace"></div>
                     </div>
+                    <div class="form-group">
+                        <label for="password">Mật khẩu</label>
+                        <input type="password" class="form-control" id="password" placeholder="">
+                        <div class="divider-nospace"></div>
+                    </div>
+                    <div class="form-group">
+                        <div class="form-check checkbox-text">
+                            <span style="display: flex">
+                                <input type="checkbox" class="form-check-input" id="remember">
+                                <label for="remember" class="form-check-label checkbox-start">Ghi nhớ đăng nhập</label>
+                            </span>
+                            <a href="" class="forgot-password">Quên mật khẩu?</a>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control access-right">
+                            <option selected disabled>Quyền đăng nhập</option>
+                            <option>Người dùng</option>
+                            <option>Quản trị viên</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary" type="submit">Đăng nhập</button>
+                    </div>
+                    <div class="divider-nospace"></div>
+                    <p class="text-center">Bạn không có tài khoản?<span> <a href="">Tạo tài khoản</a></span></p>
                 </div>
-                <div class="form-group">
-                    <button class="btn btn-primary">Đăng nhập</button>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
-    <app-footer></app-footer>
+</div>
+<app-footer></app-footer>
