--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,12 +1,12 @@
 // src/app/login/login.component.scss
 
-.login-form {
+.register-form {
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.login-header {
+.register-header {
     text-align: center;
     margin-bottom: 30px;
     font-weight: bold;
@@ -26,7 +26,6 @@
         background-clip: text;
         color: transparent;
         font-size: 14px;
-        margin-bottom: 8px;
     }
 }
 
@@ -76,16 +75,6 @@
     }
 }
 
-.forgot-password {
-    color: #0066cc;
-    text-decoration: none;
-    font-size: 14px;
-    
-    &:hover {
-        text-decoration: underline;
-    }
-}
-
 .btn-primary {
     width: 100%;
     padding: 12px;
@@ -110,17 +99,4 @@
         background-color: #0066cc;
         border-color: #0066cc;
     }
-}
-.access-right {
-    width: 100%; 
-    padding: 10px; 
-    border-radius: 5px; 
-    border: 1px solid #ccc; 
-
-    font-size: 16px; 
-}
-
-.access-right option {
-    padding: 10px; 
-    color: #333; 
 }
